--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   archive: ^4.0.7
   fl_chart: ^1.1.0
   file_picker: ^10.3.8
+  http: ^1.6.0
+  http_parser: ^4.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
